exports[`Aside Controlled mode 1`] = `
<TestWrapper>
  <Aside
    isLoading={false}
    isOpen={false}
    loadingMessage="Loading..."
    onClose={[Function]}
    onClosed={[Function]}
    onOpen={[Function]}
    onOpened={[Function]}
    title="Aside demo">
    <Menu>
      <MenuItem
        disabled={false}
        selected={false}>
        Menu item
      </MenuItem>
    </Menu>
  </Aside>
</TestWrapper>
`;

exports[`Buttons Icon Button 1`] = `
<TestWrapper>
  <Button
    busy={false}
    classes={
      Array [
        "ts-tertiary",
      ]
    }
    htmlProps={Object {}}
    id="switch-one">
    <i
      className="ts-icon-locked" />
  </Button>
</TestWrapper>
`;

exports[`Buttons Text Button 1`] = `
<TestWrapper>
  <Button
    busy={false}
    classes={
      Array [
        "ts-primary",
        "ts-micro",
      ]
    }
    htmlProps={Object {}}
    id="switch-one">
    <span>
      Default Button
    </span>
  </Button>
</TestWrapper>
`;

exports[`Menu Basic usage 1`] = `
<TestWrapper>
  <Menu>
    <MenuItem
      disabled={false}
      selected={true}>
      Menu item 1
    </MenuItem>
    <MenuItem
      disabled={false}
      selected={false}>
      Menu item 2
    </MenuItem>
  </Menu>
</TestWrapper>
`;

exports[`Switch Switch should be used in a form 1`] = `
<TestWrapper>
  <form
    data-ts="Form">
    <fieldset>
      <span>
        Controlled mode
      </span>
      <Switch
        checked={true}
        defaultChecked={undefined}
        disabled={false}
        id="switch-one"
        label="Switch one"
        name=""
        onChange={[Function]}
        value={undefined} />
    </fieldset>
    <fieldset>
      <span>
        Uncontrolled mode
      </span>
      <Switch
        checked={undefined}
        defaultChecked={true}
        disabled={false}
        id="switch-two"
        label="Switch two"
        name=""
        onChange={[Function]}
        value={undefined} />
    </fieldset>
  </form>
</TestWrapper>
`;

exports[`TsLogo Basic usage 1`] = `
<svg
  className="ts-logo"
  viewBox="0 0 161 109">
  <path
    d="M72.5 1h-70C1 1 0 1.6 0 3v18c0 .8.5 1.6 1.4 2 .3 0 .7 0 1 .2H45v83c0 1.3 1 2.2 2.4 2.2h25c1.4 0 2.4-1 2.4-2.2V3c0-1.3-1-2-2.3-2m86 0h-70C87 1 86 1.8 86 3v103.4c0 1.3 1 2 2.4 2h25c1.4 0 2.4-.8 2.4-2v-83h42.6c.4 0 .7 0 1-.2 1-.3 1.4-1 1.4-2v-18c0-1.3-1-2.2-2.3-2.2"
    fillRule="evenodd" />
</svg>
`;
